# maths-challenges

./: CMakeLists.txt
include/: Circle.h
objs/: Circle.h
src/: Circle.cpp  main.cpp
tests/: Circle.Tests.cpp
